--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,8 @@ install:
 - pip install jinja2
 before_script:
 - mkdir -p builds/build
-script: PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery-build.py . 2>&1 | tee -a builds/build/buildlog.txt
+script: PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery-build.py .
+  2>&1 | tee -a builds/build/buildlog.txt
 branches:
   only:
   - master
@@ -22,4 +23,4 @@ after_script:
 - PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery-travis-deploy.py
 env:
   global:
-    secure: K6yscDsgf4CVojnpNoNanBRVRJ1gIAdBcX324aZ2w23pWUQPoAp6grGaEU1zMtqYM3fFeboMd6N1aMgC6VaDJ57f9z1G/tuw9xCjkL1r0Gb5/PWlZ/OMg6KY65Jh8rkjK/WB3ayyDLGxHsRxxplxJXUCg4PvfCph/HJ4VUSAFcw=
+    secure: IK5tO49YziXtrDJZjJyOq3cRoTQzrAhG4Bgv2wvWblUqWO7dGj2RrPEQ1Kh/Mk7rCQM5iGl3dbMCI04mlW/uqoPGXI2OmasECw7Q6TxGIv/03XmRXhK0nRXostrnnNKDV5Keo0cCxey4giADfjY2MBZ++KJJIMp1NejtmYtVsxQ=
